--- a/Portfolio/app/build.gradle
+++ b/Portfolio/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'me.relex:circleindicator:2.1.6'
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
 }
