--- a/EatingDiary/app/build.gradle
+++ b/EatingDiary/app/build.gradle
@@ -45,4 +45,6 @@ dependencies {
     implementation 'com.google.zxing:core:3.4.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 }
